Added search page

--- a/static/styles.css
+++ b/static/styles.css
@@ -161,3 +161,22 @@ body {
     display: inline-block;
     text-decoration: none;
 }
+
+.search-result {
+    background-color: #fff;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    margin: 20px;
+    padding: 20px;
+}
+
+.search-result-link {
+    color: #0097a7;
+    font: 400 40px sans-serif;   
+    text-decoration: none;
+}
+
+.search-result-description {
+    font: 15px sans-serif;
+    color: #000;
+    margin-top: 10px;
+}
