--- a/templates/article.tmpl
+++ b/templates/article.tmpl
@@ -9,7 +9,9 @@
   <body>
     <div class="header-wrapper">
       <div class="header">
-	<input class="header-search" type="text" placeholder="Search"/>
+	<form action="/search" method="get">
+          <input class="header-search" type="text" placeholder="Search" name="q" />
+	</form>
       </div>
     </div>
     <div class="main-header-wrapper">
