--- a/templates/article.tmpl
+++ b/templates/article.tmpl
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/markdown.css">
+    <link rel="stylesheet" href="/static/prettify.css">
   </head>
   <body>
     <div class="header-wrapper">
@@ -50,4 +51,13 @@
       {{.Html}}
     </div>
   </body>
+  <script src="/static/prettify.js"></script>
+  <script>
+    var blocks = document.querySelectorAll('pre');
+    var i = 0;
+    for (i=0; i< blocks.length; i++) {
+	blocks[i].className = 'prettyprint';
+    }
+    prettyPrint();
+  </script>
 </html>
