--- a/static/styles.css
+++ b/static/styles.css
@@ -5,7 +5,7 @@ body {
 
 .header-wrapper {
     width: 100%;
-    background-color: #0097a7;
+    background-color: #1976d2;
     height: 46px;
 }
 
@@ -19,7 +19,7 @@ body {
     font: 20px sans-serif;
     width: calc(100% - 60px);
     height: 36px;
-    background-color: #00bcd4;
+    background-color: #1e88e5;
     border: none;
     margin-top: 4px;
     padding: 0 20px;
@@ -39,7 +39,7 @@ body {
 .main-header-wrapper {
     width: 100%;
     height: 184px;
-    background-color: #00bcd4;
+    background-color: #2196f3;
 }
 
 .main-header-wrapper-small {
@@ -57,7 +57,7 @@ body {
 .main-header h2{
     color: #fff;
     display: inline-block;
-    font: 34px sans-serif;
+    font: 50px sans-serif;
     letter-spacing: -.01em;
     margin: 0;
     max-width: 100%;
